# brain

./: .claude-mac.json.example  .claude-windows.json.example  .claude.json  .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  README.md  brain-setup.md  claude.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  trufflehog.yml
.obsidian/: app.json  graph.json
.obsidian/plugins/obsidian-local-rest-api/: data.json
Brain/.obsidian/: app.json  graph.json  workspace.json
Brain/.obsidian/plugins/obsidian-local-rest-api/: data.json
System/: Commands.md  Git Branching Style.md  agents.yaml  router.py  smoke_test.py  tools.py
System/tests/: test_router.py  test_tools.py
