[project]
name = "brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.83.14",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.23.1",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

[tool.mypy]
# SHIFT-LEFT: Prevent the OS from type-checking dynamically generated sandbox code
exclude = [
    "^Studio/",
    "^Personal/",
    "^Professional/",
    "^Meta/",
    "^logs/"
]
# Ignore missing imports for third-party libraries that don't have type hints
ignore_missing_imports = true